# Arm

./: .cproject  .gitignore  .project  CMakeLists.txt
.doc/: dev_guide.md  download_firmware.md  ide_configuration.md
algorithm/: CMakeLists.txt
algorithm/crc/: crc.cpp  crc.h
algorithm/fifo_buffer/: fifo_buffer.cpp  fifo_buffer.h
algorithm/filter/: filter.cpp  filter.h  kalman_filter.cpp  kalman_filter.h
algorithm/math/: math.cpp  math.h  matrix.cpp  matrix.h
algorithm/pid/: pid.cpp  pid.h
app/: CMakeLists.txt
app/chassis/: MecanumChassis.cpp  MecanumChassis.h  SwerveChassis.cpp  SwerveChassis.h  chassis.cpp  chassis.h
app/communication/: comm_monitor.cpp  comm_monitor.h
app/control/: control.cpp  control.h
app/demo_arm/: arm.cpp  arm.h  rc_to_theta.cpp  rc_to_theta.h
app/gimbal/: gimbal.cpp  gimbal.h
app/motorinit/: motorinit.cpp  motorinit.h
app/shoot/: shoot.cpp  shoot.h
base/: CMakeLists.txt
base/bsp_buzzer/: bsp_buzzer.cpp  bsp_buzzer.h
base/bsp_led/: bsp_led.cpp  bsp_led.h
base/chassis/: chassis.h
base/encoder/: encoder.cpp  encoder.h
base/imu/: imu.cpp  imu.h  mahony.cpp  mahony.h
base/imu/driver/: bmi088.cpp  bmi088.h  bmi088_reg.h  ist8310.cpp  ist8310.h  ist8310_reg.h  mpu6500.cpp  mpu6500.h  mpu6500_reg.h
base/monitor/: can_monitor.cpp  can_monitor.h  imu_monitor.cpp  imu_monitor.h  motor_monitor.cpp  motor_monitor.h
base/motor/: motor.cpp  motor.h  swerve_steering_motor.cpp  swerve_steering_motor.h
base/motor/motor_driver/: dji_motor_driver.cpp  dji_motor_driver.h  lk_motor_driver.cpp  lk_motor_driver.h  mit_motor_driver.cpp  mit_motor_driver.h
base/remote/: remote.cpp  remote.h  wfly.cpp  wfly.h
base/servo/: servo.cpp  servo.h
base/tof/: tof.cpp  tof.h
common/: CMakeLists.txt
common/bool_input/: bool_input.cpp  bool_input.h
common/cap_comm/: cap_comm.cpp  cap_comm.h
common/communication/: CMakeLists.txt
common/communication/board_comm/: board_comm.cpp  board_comm.h
common/communication/cap_comm/: cap_comm.cpp  cap_comm.h
common/communication/cv_comm/: cv_comm.cpp  cv_comm.h  cv_protocol.h
common/communication/imu_comm/: imu_comm.cpp  imu_comm.h
common/communication/referee_comm/: referee_comm.cpp  referee_comm.h  referee_protocol.h  referee_ui.cpp
common/connect/: connect.cpp  connect.h
common/fifo/: fifo_buffer.cpp  fifo_buffer.h
common/heat_limit/: heat_limit_infantry.cpp  heat_limit_infantry.h
common/log/: bsp_log.c  bsp_log.h
common/message_center/: message_center.cpp  message_center.h  msg_def.h
common/power_limit/: power_limit.cpp  power_limit.h
common/referee_comm/: referee_comm.cpp  referee_ui.cpp  referee_ui.h
driver/: CMakeLists.txt
driver/motor/: motor.cpp  motor.h
driver/motor/motor_driver/: dji_motor_driver.cpp  dji_motor_driver.h  lk_motor_driver.cpp  lk_motor_driver.h  mit_motor_driver.cpp  mit_motor_driver.h
interface/: callback.cpp  callback.h  robot.cpp  robot.h
mcu/stm32f407/: .mxproject  CMakeLists.txt  STM32F407IGHx_FLASH.ld  hardware_config.h  stm32f407.ioc
mcu/stm32f407/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  sys.h  tim.h
mcu/stm32f407/MDK-ARM/: startup_stm32f407xx.s  stm32f407.uvoptx  stm32f407.uvprojx
mcu/stm32f407/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
mcu/stm32f407/Src/: adc.c  can.c  dma.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  sys.c  tim.c  usart.c  usbd_cdc_if.c  usbd_conf.c
mcu/stm32f427/: .mxproject  CMakeLists.txt  STM32F427IIHx_FLASH.ld  hardware_config.h  stm32f427.ioc
mcu/stm32f427/Inc/: FreeRTOSConfig.h  main.h  spi.h  stm32f4xx_it.h  tim.h  usbd_cdc_if.h
mcu/stm32f427/MDK-ARM/: startup_stm32f427xx.s  stm32f427.uvoptx  stm32f427.uvprojx
mcu/stm32f427/Src/: adc.c  can.c  cpu_utils.c  dma.c  freertos.c  gpio.c  i2c.c  main.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_tim.c  stm32f4xx_it.c  tim.c  usart.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
middleware/: CMakeLists.txt
middlewares/: CMakeLists.txt
middlewares/SEGGER/RTT/: SEGGER_RTT_printf.c
